// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionBackground/> should render SectionBackground with background dark 1`] = `
.c0 {
  background: #F2F2F2;
  color: #333333;
  -webkit-transition: background 300ms ease-in;
  transition: background 300ms ease-in;
  background: #0D0D0D;
  color: #F2F2F2;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="c0"
  >
    <h1>
      Children
    </h1>
  </div>
</div>
`;

exports[`<SectionBackground/> should render SectionBackground with background white 1`] = `
.c0 {
  background: #F2F2F2;
  color: #333333;
  -webkit-transition: background 300ms ease-in;
  transition: background 300ms ease-in;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="c0"
  >
    <h1>
      Children
    </h1>
  </div>
</div>
`;
